--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tweet-snapshoot",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://api.twitter.com",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
